more or less finished

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -24,10 +24,14 @@
 }
 
 @book{spj1,
-   author={Peyton Jones, Simon L and David R Lester},
-   title={Implementing Functional Languages: a tutorial},
-   publisher={self-published},
-   year=2000
+   title = "Implementing functional languages",
+   author = "Peyton Jones, Simon L. and Lester, David R.",
+   series = "Prentice Hall international series in computer science",
+   publisher = "Prentice Hall, Impr.",
+   address = "New York",
+   url = "http://opac.inria.fr/record=b1089179",
+   isbn = "0-13-721952-0",
+   year = 1992
 }
 
 @book{spj2,
@@ -186,25 +190,26 @@ url="http://dx.doi.org/10.1007/BFb0014054"
 @misc{scheme,
     author= {Tang, Jonathan},
     title= {Write yourself a Scheme in 48 hours},
-    publisher={https://en.wikibooks.org/wiki/Write_Yourself_a_Scheme_in_48_Hours}
+    howpublished={\url{https://en.wikibooks.org/wiki/Write_Yourself_a_Scheme_in_48_Hours}},
 }
 
 @misc{diehl,
     author = {Diehl, Stephen},
     title = {Write you a Haskell},
-    publisher = {http://dev.stephendiehl.com/fun/},
+    howpublished = {\url{http://dev.stephendiehl.com/fun/}},
 }
 
 @MISC{algoW,
     author = {Martin Grabmüller},
     title = {Algorithm W Step by Step},
+    howpublished = {\url{https://github.com/mgrabmueller/AlgorithmW}},
     year = {2006}
 }
 
 @misc{transformers,
     author = {Martin Grabmuller},
     title = {Transformers Step By Step},
-    publisher = {https://github.com/mgrabmueller/TransformersStepByStep},
+    howpublished = {\url{https://github.com/mgrabmueller/TransformersStepByStep}},
 }
 
 @book{Pierce:2004:ATT:1076265,
@@ -246,10 +251,19 @@ url = {http://dx.doi.org/10.1017/CBO9780511608865}
  address = {Cambridge, MA, USA},
 }
 
+
 @book{Friedman1900,
-    author = "Friedman and Felleisen",
-    title = "The little schemer",
-    keywords = "book.computers"
+    edition = {fourth edition},
+    howpublished = {Paperback},
+    isbn = {0262560992},
+    keywords = {lisp, programming, recursion, scheme},
+    month = dec,
+    posted-at = {2011-07-23 03:37:24},
+    priority = {2},
+    publisher = {The MIT Press},
+    title = {{The Little Schemer - 4th Edition}},
+    url = {http://www.amazon.com/exec/obidos/redirect?tag=citeulike07-20\&path=ASIN/0262560992},
+    year = {1995}
 }
 
 @inproceedings{Wadler:1995:MFP:647698.734146,
