--- a/docs/syntax.tex
+++ b/docs/syntax.tex
@@ -76,6 +76,7 @@ These anonymous functions can also be used in pipes:
 \end{minted}
 
 \subsection{Number Encodings}
+\label{encodings}
 MicroML supports encoding binary, octal and hex numbers:
 
 \begin{minted}{sml}
